--- a/track.html
+++ b/track.html
@@ -3,7 +3,8 @@
 <head> 
 <meta charset="utf-8" /> 
 <title>轨迹</title> 
-<script src="http://api.map.baidu.com/api?v=1.2&ak=31b2545ee3ce8d70782e26d471ba711d"></script> 
+<!-- <script src="http://api.map.baidu.com/api?v=1.2&ak=31b2545ee3ce8d70782e26d471ba711d"></script>  -->
+<script src="http://api.map.baidu.com/api?v=1.2&ak=CTBHyZoakgBOCGU0oGEthI6f"></script> 
 <!--
 <script type="text/javascript" src="http://api.map.baidu.com/library/LuShu/1.2/src/LuShu_min.js"></script>
 -->
